SVN
-------------------------------

XML:   Resolved issue CASTOR-1902 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed problem with validation of empty choices during unmarshalling.
       Details: http://jira.codehaus.org/browse/CASTOR-1902
       (Werner - 20070314)

JDO:   Resolved issue CASTOR-1276 using contribution from Brian Schlining [bschlining@gmail.com]
       Added a method for forcing the timezone for dates written to the database.
       Details: http://jira.codehaus.org/browse/CASTOR-1276
       (Ralf - 20070316)

Gen:   Resolved issue CASTOR-1895 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed problem with printing annotations in XML schma (schema writer)
       Details: http://jira.codehaus.org/browse/CASTOR-1895
       (Werner - 20070312)

Gen:   Resolved issue CASTOR-1893 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed problem with sequence validation and substitution groups (again).
       Details: http://jira.codehaus.org/browse/CASTOR-1893
       (Werner - 20070307)

JDO:   Resolved issue CASTOR-1812 using contribution from Steven Dolg [stevendolg@gmx.at]
       Fixed problem with SQLException: Column Index out of range.
       Details: http://jira.codehaus.org/browse/CASTOR-1812
       (Ralf - 20070303)

Gen:   Resolved issue CASTOR-1886 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed problem with ClassChoice() creation in MappingFileSourceFactory.
       Details: http://jira.codehaus.org/browse/CASTOR-1886
       (Werner - 20070228)

Gen:   Resolved issue CASTOR-1880 using contribution from Steven Dolg [stevendolg@gmx.at]
       Fixed problem with illegal field name suffix 'Choice'.
       Details: http://jira.codehaus.org/browse/CASTOR-1880
       (Werner - 20070223)

Gen:   Resolved issue CASTOR-1882 using contribution from Werner Guttmann [werner.guttmann@gmx.net]